Revert "navbar: specify default gravatar icon (Bug 1455361)"
This reverts commit 0f966cccbdf1a38adf97dfba4ddca468ead8a9c8.
arc land squashed child commits without my knowledge.

--- a/landoui/assets_src/css/pages/RevisionPage.scss
+++ b/landoui/assets_src/css/pages/RevisionPage.scss
@@ -59,8 +59,6 @@ h1.RevisionPage-heading {
   overflow-y: hidden;
   padding: 0;
   margin: 0;
-  color: inherit;
-  background-color: inherit;
 }
 
 .RevisionPage-commit-expand {
